<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        
	    <TextView 
	        android:id="@+id/textview_username"
	        android:layout_alignParentTop="true"
	        android:layout_alignParentLeft="true"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingLeft="10dp"
	        android:paddingTop="10dp"
	        android:paddingBottom="5dp"
	        android:text="Max"
	        android:textSize="20dp"
	        />
	    
	    <View
	        android:id="@+id/view_line1"                                     
	  		android:layout_width="match_parent"
	   		android:layout_height="2dp" 
	   		android:layout_marginBottom="10dp"      
	   		android:background="#C0C0C0"
	   		android:layout_below="@id/textview_username"
	   		android:layout_marginRight="5dp"
	   		android:layout_marginLeft="5dp"
	   		/>
	    
	    <ImageView 
	        android:id="@+id/imageview_profileimage"
	        android:layout_width="75dp"
	        android:layout_height="75dp"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@id/view_line1"
	        android:layout_marginLeft="20dp"
	        android:src="@drawable/potato_icon"
	        />
	    
	    <TextView
	        android:id="@+id/textview_settings"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@id/imageview_profileimage"
	        android:layout_alignTop="@id/imageview_profileimage"
	        android:paddingLeft="15dp"
	        android:paddingTop="10dp"
	        android:paddingBottom="10dp"
	        android:text="settings"
	        />
	    
	    <TextView
	        android:id="@+id/textview_schedule"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@id/imageview_profileimage"
	        android:layout_below="@id/textview_settings"
	        android:paddingLeft="15dp"
	        android:paddingTop="10dp"
	        android:paddingBottom="10dp"
	        android:text="Schedule"
	        />
	    
	    <TextView
	        android:id="@+id/textview_logout"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_alignBottom="@id/textview_username"
	        android:paddingRight="10dp"
	        android:paddingBottom="10dp"
	        android:text="Log Out"
	        />
	    <LinearLayout
	        	android:layout_height="wrap_content" 
	        	android:layout_width="match_parent" 
	        	android:orientation="vertical"
	        	android:layout_below="@id/imageview_profileimage" 
	        	android:paddingTop="20dp" >
	        	
	    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#CD661D"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" />
    
     <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#CD661D"
        android:text="Watched"
        android:textSize="20sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="10dp"
        android:background="#CD661D"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" />
    
     <HorizontalScrollView
        android:id="@+id/hsv"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_alignParentTop="true"
    	android:fillViewport="true"
    	android:measureAllChildren="false"
    	android:scrollbars="none" >
        <LinearLayout
            android:id="@+id/asthma_action_plan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:orientation="horizontal" >
                <LinearLayout 
            	    android:id="@+id/watched_gameofthrones"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:orientation="vertical" 
        			android:visibility="gone">
                	<ImageView
                	    android:id="@+id/imageview_gameofthrones"
                    	android:layout_width="100dp"
                    	android:layout_height="100dp"
                    	android:src="@drawable/gameofthrones" 
                    	android:onClick="openTVShow"
                    	android:tag="gameofthrones"/>
                	<TextView 
                	    android:id="@+id/textview_gameofthrones"
                	    android:layout_width="100dp"
                	    android:layout_height="wrap_content"
                	    android:gravity="center"
                	    android:text="@string/gameofthrones"  />
                	    
                </LinearLayout>
                <LinearLayout 
                    android:id="@+id/watched_chappelle"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:orientation="vertical" 
        			android:visibility="gone">
                	<ImageView
                	    android:id="@+id/imageview_chappelle"
                    	android:layout_width="100dp"
                    	android:layout_height="100dp"
                    	android:src="@drawable/chappelle" 
                    	android:onClick="openTVShow"
                    	android:tag="chappelle"/>
                	<TextView 
                	    android:id="@+id/textview_chappelle"
                	    android:layout_width="100dp"
                	    android:layout_height="wrap_content"
                	    android:gravity="center"
                	    android:text="@string/chappelle" />
                </LinearLayout>
                <LinearLayout 
            	    android:id="@+id/watched_sportscenter"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:orientation="vertical" 
        			android:visibility="gone">
                	<ImageView
                	    android:id="@+id/imageview_sportscenter"
                    	android:layout_width="100dp"
                    	android:layout_height="100dp"
                    	android:src="@drawable/sportscenter" 
                    	android:onClick="openTVShow"
                    	android:tag="sportscenter"/>
                	<TextView 
                	    android:id="@+id/textview_sportscenter"
                	    android:layout_width="100dp"
                	    android:layout_height="wrap_content"
                	     android:gravity="center"
                	    android:text="@string/sportscenter" />
                </LinearLayout>
                <LinearLayout 
                    android:id="@+id/watched_cosmos"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:orientation="vertical" 
        			android:visibility="gone">
                	<ImageView
                	    android:id="@+id/imageview_cosmos"
                    	android:layout_width="100dp"
                    	android:layout_height="100dp"
                    	android:src="@drawable/cosmos" 
                    	android:onClick="openTVShow"
                    	android:tag="cosmos"/>
                	<TextView 
                	    android:id="@+id/textview_cosmos"
                	    android:layout_width="100dp"
                	    android:layout_height="wrap_content"
                	    android:gravity="center"
                	    android:text="@string/cosmos" />
                </LinearLayout>
                <LinearLayout 
            	    android:id="@+id/watched_breakingbad"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:orientation="vertical" 
        			android:visibility="gone">
                	<ImageView
                	    android:id="@+id/imageview_breakingbad"
                    	android:layout_width="100dp"
                    	android:layout_height="100dp"
                    	android:src="@drawable/breakingbad" 
                    	android:onClick="openTVShow"
                    	android:tag="breakingbad"/>
                	<TextView 
                	    android:id="@+id/textview_breakingbad"
                	    android:layout_width="100dp"
                	    android:layout_height="wrap_content"
                	    android:gravity="center"
                	    android:text="@string/breakingbad" />
                </LinearLayout>
                <LinearLayout 
                    android:id="@+id/watched_southpark"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:orientation="vertical" 
        			android:visibility="gone">
                	<ImageView
                	    android:id="@+id/imageview_southpark"
                    	android:layout_width="100dp"
                    	android:layout_height="100dp"
                    	android:src="@drawable/southpark" 
                    	android:onClick="openTVShow"
                    	android:tag="southpark"/>
                	<TextView 
                	    android:id="@+id/textview_southpark"
                	    android:layout_width="100dp"
                	    android:layout_height="wrap_content"
                	    android:gravity="center"
                	    android:text="@string/southpark" />
                </LinearLayout>
                <LinearLayout 
            	    android:id="@+id/watched_invzim"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:orientation="vertical" 
        			android:visibility="gone">
                	<ImageView
                	    android:id="@+id/imageview_invzim"
                    	android:layout_width="100dp"
                    	android:layout_height="100dp"
                    	android:src="@drawable/invzim" 
                    	android:onClick="openTVShow"
                    	android:tag="invzim"/>
                	<TextView 
                	    android:id="@+id/textview_invzim"
                	    android:layout_width="100dp"
                	    android:layout_height="wrap_content"
                	     android:gravity="center"
                	    android:text="@string/invzim" />
                </LinearLayout>
  
               	
        </LinearLayout>

</HorizontalScrollView>

     <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#CD661D"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" />
     
     <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#CD661D"
        android:text="Want to Watch"
        android:textSize="20sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="10dp"
        android:background="#C0C0C0"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" />
    
     <HorizontalScrollView
        android:id="@+id/hsv"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_alignParentTop="true"
    	android:fillViewport="true"
    	android:measureAllChildren="false"
    	android:scrollbars="none" >
        <LinearLayout
            android:id="@+id/asthma_action_plan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:orientation="horizontal" >
                <LinearLayout 
            	    android:id="@+id/wanted_gameofthrones"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:orientation="vertical" 
        			android:visibility="gone">
                	<ImageView
                	    android:id="@+id/imageview_gameofthrones"
                    	android:layout_width="100dp"
                    	android:layout_height="100dp"
                    	android:src="@drawable/gameofthrones" 
                    	android:onClick="openTVShow"
                    	android:tag="gameofthrones"/>
                	<TextView 
                	    android:id="@+id/textview_gameofthrones"
                	    android:layout_width="100dp"
                	    android:layout_height="wrap_content"
                	    android:gravity="center"
                	    android:text="@string/gameofthrones"  />
                	    
                </LinearLayout>
                <LinearLayout 
                    android:id="@+id/wanted_chappelle"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:orientation="vertical" 
        			android:visibility="gone">
                	<ImageView
                	    android:id="@+id/imageview_chappelle"
                    	android:layout_width="100dp"
                    	android:layout_height="100dp"
                    	android:src="@drawable/chappelle" 
                    	android:onClick="openTVShow"
                    	android:tag="chappelle"/>
                	<TextView 
                	    android:id="@+id/textview_chappelle"
                	    android:layout_width="100dp"
                	    android:layout_height="wrap_content"
                	    android:gravity="center"
                	    android:text="@string/chappelle" />
                </LinearLayout>
                <LinearLayout 
            	    android:id="@+id/wanted_sportscenter"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:orientation="vertical" 
        			android:visibility="gone">
                	<ImageView
                	    android:id="@+id/imageview_sportscenter"
                    	android:layout_width="100dp"
                    	android:layout_height="100dp"
                    	android:src="@drawable/sportscenter" 
                    	android:onClick="openTVShow"
                    	android:tag="sportscenter"/>
                	<TextView 
                	    android:id="@+id/textview_sportscenter"
                	    android:layout_width="100dp"
                	    android:layout_height="wrap_content"
                	     android:gravity="center"
                	    android:text="@string/sportscenter" />
                </LinearLayout>
                <LinearLayout 
                    android:id="@+id/wanted_cosmos"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:orientation="vertical" 
        			android:visibility="gone">
                	<ImageView
                	    android:id="@+id/imageview_cosmos"
                    	android:layout_width="100dp"
                    	android:layout_height="100dp"
                    	android:src="@drawable/cosmos" 
                    	android:onClick="openTVShow"
                    	android:tag="cosmos"/>
                	<TextView 
                	    android:id="@+id/textview_cosmos"
                	    android:layout_width="100dp"
                	    android:layout_height="wrap_content"
                	    android:gravity="center"
                	    android:text="@string/cosmos" />
                </LinearLayout>
                <LinearLayout 
            	    android:id="@+id/wanted_breakingbad"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:orientation="vertical" 
        			android:visibility="gone">
                	<ImageView
                	    android:id="@+id/imageview_breakingbad"
                    	android:layout_width="100dp"
                    	android:layout_height="100dp"
                    	android:src="@drawable/breakingbad" 
                    	android:onClick="openTVShow"
                    	android:tag="breakingbad"/>
                	<TextView 
                	    android:id="@+id/textview_breakingbad"
                	    android:layout_width="100dp"
                	    android:layout_height="wrap_content"
                	    android:gravity="center"
                	    android:text="@string/breakingbad" />
                </LinearLayout>
                <LinearLayout 
                    android:id="@+id/wanted_southpark"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:orientation="vertical" 
        			android:visibility="gone">
                	<ImageView
                	    android:id="@+id/imageview_southpark"
                    	android:layout_width="100dp"
                    	android:layout_height="100dp"
                    	android:src="@drawable/southpark" 
                    	android:onClick="openTVShow"
                    	android:tag="southpark"/>
                	<TextView 
                	    android:id="@+id/textview_southpark"
                	    android:layout_width="100dp"
                	    android:layout_height="wrap_content"
                	    android:gravity="center"
                	    android:text="@string/southpark" />
                </LinearLayout>
                <LinearLayout 
            	    android:id="@+id/wanted_invzim"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:orientation="vertical" 
        			android:visibility="gone">
                	<ImageView
                	    android:id="@+id/imageview_invzim"
                    	android:layout_width="100dp"
                    	android:layout_height="100dp"
                    	android:src="@drawable/invzim" 
                    	android:onClick="openTVShow"
                    	android:tag="invzim"/>
                	<TextView 
                	    android:id="@+id/textview_invzim"
                	    android:layout_width="100dp"
                	    android:layout_height="wrap_content"
                	     android:gravity="center"
                	    android:text="@string/invzim" />
                </LinearLayout>
	</LinearLayout>
</HorizontalScrollView>
	    
    </LinearLayout>
	</RelativeLayout>
</ScrollView>
